# ata-rag-chat

./: .env.example  CLAUDE.md  docker-compose.override.yml  docker-compose.yml  prd.md
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  chat.py  router.py
backend/app/chunking/: chunker.py
backend/app/content/: cleaner.py  language_detect.py  markdown_converter.py  sanitizer.py
backend/app/core/: config.py  security.py
backend/app/core/prompts/: system_prompt.py
backend/app/crawler/: base.py  httpx_crawler.py  pdf_handler.py  robots.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260720_0001_create_pages_and_chunks.py  (+2 more)
backend/app/embeddings/: embedder.py  hashing.py
backend/app/models/: chat_query.py  chunk.py  crawl_run.py  page.py
backend/app/pipeline/: crawl_page.py  ingest.py  sync.py
backend/app/retrieval/: confidence.py  vector_search.py
backend/app/scheduler/: main.py
backend/app/schemas/: chat.py
backend/app/services/: admin_service.py  chat_service.py  llm_client.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_api.py  test_chat_api.py  test_ingest_pipeline.py  test_sync_pipeline.py  test_vector_search.py
backend/tests/unit/: test_chunker.py  test_cleaner.py  test_confidence.py  test_crawl_page.py  test_embedder.py  test_hashing.py  test_httpx_crawler.py  test_language_detect.py  test_llm_client.py  test_markdown_converter.py  test_pdf_handler.py  test_robots.py  test_sanitizer.py  test_system_prompt.py
(+17 files in other folders)
